Day 8 cleanup